src/objects/Contact__c.object
<CustomObject>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>DAZN Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NickName__c</fullName>
        <label>Nickname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherPhoneType__c</fullName>
        <label>Other Phone Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherPhone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonalEmail__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxRegion__c</fullName>
        <label>Tax Region</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedDate__c</fullName>
        <label>DAZN Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WorkEmail__c</fullName>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WorkPhone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <label>DAZN Contact</label>
    <nameField>
        <label>Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DAZN Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>